force-app/main/default/objects/Product2/fields/box__FolderId__c.field-meta.xml
<CustomField>
    <fullName>box__FolderId__c</fullName>
    <label>FolderId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>