force-app/main/default/objects/Product2/fields/Drawing_No__c.field-meta.xml
<CustomField>
    <fullName>Drawing_No__c</fullName>
    <label>Drawing No.</label>
    <type>TextArea</type>
</CustomField>