force-app/main/default/objects/Product2/fields/Parts_List_No__c.field-meta.xml
<CustomField>
    <fullName>Parts_List_No__c</fullName>
    <label>Parts List No.</label>
    <type>TextArea</type>
</CustomField>