force-app/main/default/objects/Product2/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERL - Eriez Lifting Magnets</fullName>
            </value>
            <value>
                <fullName>ERM - Eriez Metal Detection</fullName>
            </value>
            <value>
                <fullName>ERP - Eriez ProGrade</fullName>
            </value>
            <value>
                <fullName>ERU - Eriez Units (Separation)</fullName>
            </value>
            <value>
                <fullName>ERV - Eriez Vibratory</fullName>
            </value>
            <value>
                <fullName>GMU - gravelMAX Pump Units</fullName>
            </value>
            <value>
                <fullName>KRU - Krebs Cyclone Units</fullName>
            </value>
            <value>
                <fullName>MMS - millMAX Units w/ Stainless Steel</fullName>
            </value>
            <value>
                <fullName>MMU - millMAX Units</fullName>
            </value>
            <value>
                <fullName>RMU - slurryMAX Units</fullName>
            </value>
            <value>
                <fullName>TGU - Technegate Knifegate Units</fullName>
            </value>
            <value>
                <fullName>VMU - vMAX Pump Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>