force-app/main/default/objects/Product2/fields/Seal_Type__c.field-meta.xml
<CustomField>
    <fullName>Seal_Type__c</fullName>
    <label>Seal Type</label>
    <type>TextArea</type>
</CustomField>