force-app/main/default/objects/Product2/fields/Standard_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Standard_Lead_Time__c</fullName>
    <label>Standard Lead Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>